--- a/demo/supercluster/cluster.css
+++ b/demo/supercluster/cluster.css
@@ -1,3 +1,16 @@
+html, body, #map {
+	height: 100%;
+	margin: 0;
+	overflow: hidden;
+}
+.info { padding: 6px 8px; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; }
+
+.info h4 { margin: 0 0 5px; color: #777; }
+
+.legend { text-align: left; line-height: 18px; color: #555; }
+
+.legend i { width: 18px; height: 18px; float: left; margin-right: 8px; opacity: 0.7; }
+
 .marker-cluster-small {
 	background-color: rgba(181, 226, 140, 0.6);
 	}
