--- a/demo/supercluster/cluster.css
+++ b/demo/supercluster/cluster.css
@@ -11,12 +11,21 @@ html, body, #map {
 
 .legend i { width: 18px; height: 18px; float: left; margin-right: 8px; opacity: 0.7; }
 
+.marker-cluster-one {
+	background-color: rgba(51, 136, 255, 0.9);
+}
+
+.marker-cluster-one div {
+	background-color: rgba(51, 136, 255, 0.9);
+}
+
 .marker-cluster-small {
 	background-color: rgba(181, 226, 140, 0.6);
-	}
+}
+
 .marker-cluster-small div {
 	background-color: rgba(110, 204, 57, 0.6);
-	}
+}
 
 .marker-cluster-medium {
 	background-color: rgba(241, 211, 87, 0.6);
@@ -35,7 +44,8 @@ html, body, #map {
 .marker-cluster {
 	background-clip: padding-box;
 	border-radius: 20px;
-	}
+}
+
 .marker-cluster div {
 	width: 30px;
 	height: 30px;
@@ -45,7 +55,8 @@ html, body, #map {
 	text-align: center;
 	border-radius: 15px;
 	font: 12px "Helvetica Neue", Arial, Helvetica, sans-serif;
-	}
+}
+
 .marker-cluster span {
 	line-height: 30px;
-	}
+}
