--- a/demo/supercluster/cluster.css
+++ b/demo/supercluster/cluster.css
@@ -11,6 +11,8 @@ html, body, #map {
 
 .legend i { width: 18px; height: 18px; float: left; margin-right: 8px; opacity: 0.7; }
 
+.yui3-aclist-content { width: 300px; }
+
 .marker-cluster-one {
 	background-color: rgba(51, 136, 255, 0.9);
 }
